<resources>
    <string name="app_name">ByteDance-hw1</string>
    <string name="person_description_hint">this one is too lazy to write</string>
    <string name="status_happy">happy😀</string>
    <string name="status_not_happy">not so good😢</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">NEXT</string>

    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The suez canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The amazon River is the longest river</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freash water.</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">SHOW ANSWER</string>
    <string name="cheat_button">CHEAT!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="progress_now">当前进度为%d</string>
</resources>