<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <!-- Include other widget or layout tags here. These are considered
            "child views" or "children" of the linear layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/person_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:contentDescription="个人头像"
            android:padding="2dp"
            android:src="@drawable/avatar" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radio_group_status">

            <RadioButton
                android:id="@+id/radio_status_happy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_happy" />

            <RadioButton
                android:id="@+id/radio_status_not_happy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_not_happy" />
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/person_description"
            android:hint="@string/person_description_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button" />


    </LinearLayout>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/arrow_right"
        android:drawablePadding="4dp"
        android:text="@string/next_button"
        android:drawableEnd="@drawable/arrow_right" />

    <TextView
        android:id="@+id/version_sdk_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="12123" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <ProgressBar
            android:id="@+id/progress_now"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:max="100"
            android:progress="18" />
        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_now"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>
